plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'ru.digitalchef'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

wrapper {
    gradleVersion = '8.5'
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    compileOnly 'org.projectlombok:lombok:1.18.30'

    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.23'
    implementation 'org.springframework:spring-web:6.1.12'
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.3'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.24'
    implementation 'org.elasticsearch:elasticsearch:7.17.24'
    implementation 'co.elastic.clients:elasticsearch-java:8.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
